Finished Site Plan and added images

--- a/site-plan.html
+++ b/site-plan.html
@@ -30,16 +30,20 @@
 
 
       <h3>Audience</h3>
-      <p>I cater to a certain group of individuals. Those who have ever bought gaming appliances know the hardship of opening a 
-        box to find an item that could be straight out of wish. Spending $40, just to get headsets that you might even find at dollar tree.
-         I want to help those people. Those people long for a company that can give them what they want. I will be able to make sure 
-         that they are pleased! </p>  <!-- change this -->
+      <p>My website will have all the gaming appliances you need.
+         I will have things like headsets, mouses, keyboards, laptops, PCs,
+        and more! I will be able to sell these fantastic items through the 
+        new and improved website that I have made. This website will be a 
+        modern-day revolution, building on the idea of online shopping and 
+        taking it to the next level! </p>  <!-- change this -->
 
       <hr>
       <h2>Branding</h2>
       <h3>Website Logo</h3>
       <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-      <img src="#" alt="Logo image">
+      <img src="images/logo.png" alt="Logo image">
+      <h4>Or</h4>
+      <img src="images/logoSmall.png" alt="Logo image">
       <hr>
       <h2>
         Style Guide
@@ -50,7 +54,14 @@
       <h3>
         Color Palette
       </h3>
-      <!--  The colors you choose for a website are one of the most important decisions you will make. Follow the instructions on the activity in iLearn then return and replace the color codes below with the hex color codes (the 6 digit numbers that show at the bottom of each color) for the colors you have chosen below.  You should have at least 2 colors but do not have to fill in all 4 if you do not need them.  -->
+      <!--  The colors you choose for a website are
+         one of the most important decisions you will make.
+          Follow the instructions on the activity in iLearn 
+          then return and replace the color codes below with the 
+          hex color codes (the 6 digit numbers that show at the bottom
+           of each color) for the colors you have chosen below. 
+            You should have at least 2 colors but do not have to
+             fill in all 4 if you do not need them.  -->
 
       <!-- Copy and paste the URL to your finished palette below Make sure to paste it into both spots -->
       Palette URL: <a href="https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c" target="_blank">https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c</a>
@@ -70,16 +81,16 @@
       <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Why did you choose what you did?  Make sure to review the list of web safe fonts at W3Schools.org as a starting point.  Think also about which of your colors above you might use for background and font colors. -->
 
       <h4>
-        Heading Font: [Font Name here]  <!-- change this -->
+        Heading Font: Zilla Slab  <!-- change this -->
       </h4>
       <h4>
-        Paragraph Font: [Font Name here]  <!-- change this -->
+        Paragraph Font: Hind Siliguri  <!-- change this -->
       </h4>
       <h3>
         Normal paragraph example
       </h3>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        -> I liked the font, so I kept them <-, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
       </p>
       <h3>
         Colored paragraph example
@@ -133,29 +144,34 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        About Us
+        My name is Jonathan Offret, I am a student at BYU-I studying Animal Science. I started this website so I could sell the items that people wanted.
+        Through the website, you can see the item, look at it's description, and watch a demo video I made by clicking the demo button next to them!
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="images/Jonathan.jpg" alt="image for homepage">
+        <img src="images/MainImage.jpg" alt="image for homepage">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>Page 2</h3>
       <p>
-        [Written copy for the Page 2 here]
+        My first page of items. This page has: Headsets, Mouses, Keyboards, and replacement Cables.
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="images/headset.jpg" alt="image for page">
+        <img src="images/mouse.jpg" alt="image for page">
+        <img src="images/keyboard.jpg" alt="image for page">
+        <img src="images/cables.jpg" alt="image for page">
 
       </ul>
       <h3>[Page 3]</h3>
       <p>
-        [Written copy for the Page 3 here]
+        My second page of items. This page has: Laptops, Pre-built computers, and Monitors.
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="images/Laptop.jpg" alt="image for page3">
+        <img src="images/computer.jpg" alt="image for page3">
+        <img src="images/Monitor.jpg" alt="image for page">
 
       </ul>
       <hr>
@@ -167,21 +183,21 @@
 
       <h3>Home</h3>
       <p>         
-        [Any additional details about home that the wireframe does not make clear]
+        [It will have a backround welcome image with my company name in front of it, then there will be an about me page with a picture of me. Lastly there will be two navagation buttons at the bottom which take you to either page 1 or page 2]
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="images/WireframeHome.png" alt="home page wireframe">
 
       <h3>[Page 2]</h3>
       <p>         
-        [Any additional details about page 2 that the wireframe does not make clear]
+        [Items 1-4 will be adverstised here]
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="images/WireFramePage1.png" alt="page 2 wireframe">
 
       <h3>[Page 3]</h3>
       <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
+        [Items 5-7 will be advertised here]
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="images/WireframePage2.png" alt="page 3 wireframe">
     </main>
   </body>
 
