images and description added HTML

--- a/page1.html
+++ b/page1.html
@@ -22,33 +22,41 @@
     </header>
     <h1 class="page1-title">Page 1</h1>
       <div class="box1">
-            <div class="boximage1"></div>
+            <div class="boximage1">
+                <img id="headset-img" src="images/headset.jpg" alt="headset">
+            </div>
             <div class="boxtitle1">Headset</div>
-            <div class="boxdescription1"></div>
+            <div class="boxdescription1">description</div>
             <div class="boxdemo1">
                 <a class="demo" href="YOUTUBE Vdeo">Demo Video</a>
             </div>
         </div>
         <div class="box2">
-            <div class="boximage2"></div>
+            <div class="boximage2">
+                <img id="mouse-img" src="images/mouse.jpg" alt="mouse">
+            </div>
             <div class="boxtitle2">Mouse</div>
-            <div class="boxdescription2"></div>
+            <div class="boxdescription2">description</div>
             <div class="boxdemo2">
                 <a class="demo" href="YOUTUBE Vdeo">Demo Video</a>
             </div>
         </div>
         <div class="box3">
-            <div class="boximage3"></div>
+            <div class="boximage3">
+                <img id="keyboard-img" src="images/keyboard.jpg" alt="keyboard">
+            </div>
             <div class="boxtitle3">Keyboard</div>
-            <div class="boxdescription3"></div>
+            <div class="boxdescription3">description</div>
             <div class="boxdemo3">
                 <a class="demo" href="YOUTUBE Vdeo">Demo Video</a>
             </div>
         </div>
         <div class="box4">
-            <div class="boximage4"></div>
+            <div class="boximage4">
+                <img id="cables-img" src="images/cables.jpg" alt="cables">
+            </div>
             <div class="boxtitle4">Replacement Cables</div>
-            <div class="boxdescription4"></div>
+            <div class="boxdescription4">description</div>
             <div class="boxdemo4">
                 <a class="demo" href="YOUTUBE Vdeo">Demo Video</a>
             </div>
