--- a/page2.html
+++ b/page2.html
@@ -22,25 +22,31 @@
     </header>
     <h1 class="page2-title">Page 2</h1>
       <div class="box5">
-            <div class="boximage5"></div>
+            <div class="boximage5">
+                <img id="laptop-img" src="images/Laptop.jpg" alt="laptop">
+            </div>
             <div class="boxtitle5">Laptop</div>
-            <div class="boxdescription5"></div>
+            <div class="boxdescription5">description</div>
             <div class="boxdemo5">
                 <a class="demo" href="YOUTUBE Vdeo">Demo Video</a>
             </div>
         </div>
         <div class="box6">
-            <div class="boximage6"></div>
+            <div class="boximage6">
+                <img id="computer-img" src="images/computer.jpg" alt="computer">
+            </div>
             <div class="boxtitle6">Computer</div>
-            <div class="boxdescription6"></div>
+            <div class="boxdescription6">description</div>
             <div class="boxdemo6">
                 <a class="demo" href="YOUTUBE Vdeo">Demo Video</a>
             </div>
         </div>
         <div class="box7">
-            <div class="boximage7"></div>
+            <div class="boximage7">
+                <img id="monitor-img" src="images/Monitor.jpg" alt="monitor">
+            </div>
             <div class="boxtitle7">Monitor</div>
-            <div class="boxdescription7"></div>
+            <div class="boxdescription7">description</div>
             <div class="boxdemo7">
                 <a class="demo" href="YOUTUBE Vdeo">Demo Video</a>
             </div>
