Finished page 1 CSS and optimzed pages :)

--- a/page1.html
+++ b/page1.html
@@ -26,7 +26,9 @@
                 <img id="headset-img" src="images/headset.jpg" alt="headset">
             </div>
             <div class="boxtitle1">Headset</div>
-            <div class="boxdescription1">description</div>
+            <div class="boxdescription1">This headset is a blah blah X-400 and provides the best sounds quality that any gamer can ask for. 
+                For only $50, Gamers can have sound canceling, crisp microphone reading ecstasy. It comes with a 20J audio driver jack.
+            </div>
             <div class="boxdemo1">
                 <a class="demo" href="YOUTUBE Vdeo">Demo Video</a>
             </div>
@@ -36,7 +38,9 @@
                 <img id="mouse-img" src="images/mouse.jpg" alt="mouse">
             </div>
             <div class="boxtitle2">Mouse</div>
-            <div class="boxdescription2">description</div>
+            <div class="boxdescription2">This mouse is a Shlibi Mlibi z-420 and provides the best mouse movement that any gamer can ask for.
+                For only $25, Gamers can have the best sensitivity and the most graceful movement. It comes with a bluetooth USB plug in.
+            </div>
             <div class="boxdemo2">
                 <a class="demo" href="YOUTUBE Vdeo">Demo Video</a>
             </div>
@@ -46,7 +50,8 @@
                 <img id="keyboard-img" src="images/keyboard.jpg" alt="keyboard">
             </div>
             <div class="boxtitle3">Keyboard</div>
-            <div class="boxdescription3">description</div>
+            <div class="boxdescription3">This keyboard is a shlaba laba Y-80085 and provides the best keyboard design that any gamer can ask for.
+                For only $20, Gamers can have the best button pressure and the best key bindings avalible. It has a wirless and wired plug in.</div>
             <div class="boxdemo3">
                 <a class="demo" href="YOUTUBE Vdeo">Demo Video</a>
             </div>
@@ -56,7 +61,9 @@
                 <img id="cables-img" src="images/cables.jpg" alt="cables">
             </div>
             <div class="boxtitle4">Replacement Cables</div>
-            <div class="boxdescription4">description</div>
+            <div class="boxdescription4">These are just replacement cables. We have audio jacks, USB cables, HD 15 cables, Ethernet cables, both lightning and USB-C charging cords,
+                HDMI, and straight cables. For only $5 per cable, gamers can easily replace all cables.
+            </div>
             <div class="boxdemo4">
                 <a class="demo" href="YOUTUBE Vdeo">Demo Video</a>
             </div>
