Page 2 and contact us completed. All images optomized and such.

--- a/page2.html
+++ b/page2.html
@@ -26,7 +26,9 @@
                 <img id="laptop-img" src="images/Laptop.jpg" alt="laptop">
             </div>
             <div class="boxtitle5">Laptop</div>
-            <div class="boxdescription5">description</div>
+            <div class="boxdescription5">This laptop is a baba booie W-777 and provides the best CPU speed and portability you can ask for!
+                For only $600, Gamers can have a 14", Ryzen 7, RTX6000, Latop with the best portability. Comes with a 14J Charger.
+            </div>
             <div class="boxdemo5">
                 <a class="demo" href="YOUTUBE Vdeo">Demo Video</a>
             </div>
@@ -36,7 +38,8 @@
                 <img id="computer-img" src="images/computer.jpg" alt="computer">
             </div>
             <div class="boxtitle6">Computer</div>
-            <div class="boxdescription6">description</div>
+            <div class="boxdescription6">This computer is a xjsogfsj-182003 and provides the best CPU speed and graphics you can ask for!
+                For only $1400, Gamers can have a something, Ryzen 7, RTX6000, PC with the best graphics of it's time. All included and built.</div>
             <div class="boxdemo6">
                 <a class="demo" href="YOUTUBE Vdeo">Demo Video</a>
             </div>
@@ -46,7 +49,9 @@
                 <img id="monitor-img" src="images/Monitor.jpg" alt="monitor">
             </div>
             <div class="boxtitle7">Monitor</div>
-            <div class="boxdescription7">description</div>
+            <div class="boxdescription7">This monitor is a "im running out of names" A-10 and provides the best qauility screen you can ask for.
+                For only $150, Gamers can have this 25", 4K screen that is also very daurable and can widstand a lot!. Comes with a mount and stool.
+            </div>
             <div class="boxdemo7">
                 <a class="demo" href="YOUTUBE Vdeo">Demo Video</a>
             </div>
