f9ixed about me

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
         <img class="aboutme-img" src="images/Jonathan.jpg" alt="Jonathan Offret">
         <div class="aboutme-text">
             <h2>About me</h2>
-            <p>My name is Jonathan Offret, I was born on May 14, 2003, and I am currently a student at BYU-I
-                Gaming enthusiast and adept web designer, I wanted to build a website that everyone in my shoes could enjoy
-            I sell Gaming appliances for affordable prices and satisfaction guaranteed. I plan to make more websites in the future, but my
-        dream career is Animal Science work </p>
+            <p>My name is Jonathan Offret, I was born on May 14, 2003, and I am currently a student at BYU-I.
+                Gaming enthusiast and adept web designer, I wanted to build a website that everyone in my shoes could enjoy.
+            I sell gaming appliances for affordable prices and satisfaction guaranteed. I plan to make more websites in the future, but my
+        dream career is animal science work. </p>
             </div>
             <div class="Page1-box">
                 <a class="Page1" href="page1.html">Page 1</a>
